[project]
name = "downloaderbyurl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.28.2",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
    "validators>=0.35.0",
    "yt-dlp[default]>=2026.6.9",
]
